@@ -49,6 +49,7 @@
 * DecidirPlus: Update `error_code_from` to get error reason id [ajawadmirza] #4364
 * Dlocal: Add three_ds mpi support [cristian] #4345
 * Stripe PI: Add `request_three_d_secure` field for `create_setup_intent` [aenand] #4365
+* Adyen: Add `verify_amount` field for verify [ajawadmirza] #4369
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
